<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/fooddesclayout">
    <view class="com.example.PRS.ActionBar" style="@style/ActionBar" android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@id/actionbar" android:layout_weight="1"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:background="@drawable/backnew" android:id="@+id/linearLayout1"
                  android:layout_marginTop="45dp">
        <LinearLayout style="@android:style/Theme.Black" android:orientation="horizontal"
                      android:layout_width="fill_parent" android:layout_height="185dp"
                      android:background="@android:color/background_dark" android:id="@+id/linearLayout"
                      android:layout_weight="1">
            <ImageButton android:id="@id/imageButtonAlpha" android:layout_width="fill_parent"
                         android:layout_height="185dp" android:layout_gravity="center_horizontal|top"
                         android:contentDescription="@string/strTemp" android:src="@drawable/lambcurry"
                         android:layout_marginLeft="0dp" android:layout_marginTop="2dp"
                         android:background="@android:color/transparent" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:id="@id/textViewCity" android:layout_width="fill_parent" android:layout_height="0dp"
                  android:textColor="#fffcfc" android:text="@string/strFoodName"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="45dp"
                  android:layout_column="0" android:gravity="center|center_horizontal"
                  android:textStyle="bold" android:layout_weight="1"
                  android:layout_gravity="center_horizontal"/>
        <TextView android:id="@id/textViewTemperature" android:layout_width="wrap_content" android:layout_height="0dp"
                  android:layout_gravity="center" android:enabled="true" android:inputType="none"
                  android:text="@string/strDescFoodcost" android:textColor="#fbe73f" android:textSize="32dp"
                  android:layout_column="0" android:typeface="serif" android:textStyle="bold"
                  android:layout_weight="1"/>
        <TextView android:id="@id/textViewCondition" android:layout_width="wrap_content" android:layout_height="0dp"
                  android:enabled="true" android:inputType="none" android:text="@string/strDescFoodDesc"
                  android:textColor="#d8dbe0" android:textSize="16dp" android:gravity="fill_horizontal"
                  android:typeface="sans"
                  android:layout_weight="1" android:layout_gravity="center" android:layout_marginLeft="5dp"
                />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0dp"
                      android:layout_weight="1">
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:text="Quantity"
                      android:id="@+id/textView3" android:layout_column="0" android:layout_marginTop="5dp"
                      android:textColor="#ffd606" android:layout_gravity="center_vertical" android:textSize="18dp"
                      android:layout_weight="1" android:layout_marginLeft="4dp" android:gravity="center_horizontal"/>
            <EditText android:layout_width="0dp" android:layout_height="wrap_content" android:text="0"
                      android:id="@id/editTextquant" android:layout_column="1" android:layout_gravity="center"
                      android:inputType="number" android:autoText="false" android:layout_weight="1"
                      android:layout_marginRight="14dp"/>
        </LinearLayout>
        <Button android:layout_width="fill_parent" android:layout_height="0dp" android:id="@id/addtocartbutton"
                android:layout_column="0" android:layout_marginTop="5dp" android:background="@android:color/transparent"
                android:layout_weight="1" android:layout_gravity="center" android:text="Add Item"
                android:textColor="#fff2f9" android:typeface="sans" android:clickable="false" android:enabled="false"
                android:focusable="false" android:focusableInTouchMode="false"/>
    </LinearLayout>
</RelativeLayout>